# ru_touhou

./: BROWSE  CMakeLists.txt  Doxyfile  Makefile  Readme  Readme.md  SDL_rwops_zzip.c~  TAGS  TODO  back.cpp  back.hpp  bullet.cpp  bullet.hpp  collection.hpp  config.hpp  controller.cpp  controller.hpp  copypasta.cpp  copypasta.hpp  danmaku.rc  danmaku.vcproj  enemy.cpp  enemy.hpp  enemy_bullet.cpp  enemy_bullet.hpp  game.cpp  game.hpp  hero.cpp  hero.hpp  hero_bullet.cpp  hero_bullet.hpp  main.cpp  main.hpp  music.cpp  music.hpp  particles.hpp  physfsrwops.c  physfsrwops.h  resmetrics.hpp  resolution.cpp  (+9 more)
branches/physfs/: CMakeLists.txt  Doxyfile  SDL_rwops_zzip.c  SDL_rwops_zzip.h  config.hpp  controller.cpp  controller.hpp  copypasta.cpp  danmaku.rc  enemy.cpp  enemy.hpp  enemy_bullet.hpp  game.cpp  game.hpp  hero.cpp  main.cpp  music.hpp  script.cpp  script.hpp  sprite.hpp  text.cpp  text.hpp  variables.hpp
branches/physfs/th_ru/: CMakeLists.txt  effects.png.spr  functions.lua  hero.lua  lantern.png.spr  level1.png.spr
branches/sprites++/: back.hpp  game.cpp  hero.cpp  hero.hpp  main.cpp  main.hpp  sprite.cpp  sprite.hpp  text.hpp
branches/sprites++/th_ru/: aya_2.png.spr
branches/tolua++/: CMakeLists.txt  back.cpp  back.hpp  collection.hpp  controller.cpp  controller.hpp  danmaku_api.pkg  enemy.cpp  enemy.hpp  enemy_bullet.cpp  enemy_bullet.hpp  game.cpp  game.hpp  hero.cpp  music.cpp  script.cpp  script.hpp  text.cpp
branches/tolua++/th_ru/: CMakeLists.txt  aya.png.spr  fontg.png.spr  fontscore.png.spr  functions.lua  hero.lua  lantern.png.spr  level1.lua
images/: aya.png.anim  aya.png.spr  fontg.png.spr
th_ru/: CMakeLists.txt  aya.png.spr  aya_2.png.spr  fontg.png.spr  hero.lua  init.lua  level1.lua  mokou.png.spr  panel_labels.png.spr
trunk/: CMakeLists.txt  Makefile  Makefile.debian  SDL_rwops_zzip.c  back.cpp  back.hpp  config.hpp  controller.cpp  controller.hpp  copypasta.cpp  copypasta.hpp  danmaku.vcproj  enemy.cpp  enemy.hpp  enemy_bullet.cpp  enemy_bullet.hpp  game.cpp  game.hpp  hero.cpp  hero.hpp  hero_bullet.cpp  lcc.bat  main.cpp  mingw32-gentoo.cmake  music.cpp  music.hpp  particles.cpp  particles.hpp  resmetrics.hpp  resolution.cpp  script.cpp  script.hpp  shared_ptr_velosiped.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  variables.hpp
trunk/th_ru/: CMakeLists.txt  bullets.png.spr  functions.lua  hero.lua  init.lua  lantern.png.spr  level1.lua
