cmake_minimum_required (VERSION 2.6) 
project (DANMAKU)
find_package(SDL REQUIRED)
find_package(SDL_image REQUIRED)
find_package(Lua51 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLU REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
include_directories(${SDL_INCLUDE_DIR})
include_directories(${SDLIMAGE_INCLUDE_DIR})
include_directories(${LUA_INCLUDE_DIR})
include_directories(${OPENGL_INCLUDE_DIR})
include_directories(${GLU_INCLUDE_DIR})

add_definitions(-DDEBUG)
set (CMAKE_CXX_FLAGS "-Wall -Wextra -ggdb3")
set (danmaku_LIBS ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${LUA_LIBRARIES}
	${OPENGL_LIBRARIES} ${GLU_LIBRARIES})
set (danmaku_SRCS back.cpp  controller.cpp  copypasta.cpp  game.cpp  hero.cpp  main.cpp  script.cpp  sprite.cpp  text.cpp)
add_executable (danmaku ${danmaku_SRCS})
target_link_libraries(danmaku ${danmaku_LIBS})
